--- a/main_content.html
+++ b/main_content.html
@@ -11,16 +11,16 @@
 
   <header>
     <h1>Student Resources - Restricted Access</h1>
-    <p>The following resources are currently unavailable. Please contact your teacher for access.</p>
+    <p>Please click on the link below to access the Resource.</p>
   </header>
 
   <main>
     <ul>
-      <li><a href="https://www.orionfr.co.in/blank" target="_blank">Link to eBook</a></li>
+      <li><a href="https://docs.google.com/document/d/1SQD-2YmHkMgU-fv7J4FuOpV_pKcOlYv7jovg6iDlaRQ/edit?usp=sharing" target="_blank">Link to eBook</a></li>
       <li><a href="https://www.orionfr.co.in/blank" target="_blank">Link to Saved Live Online Lecture</a></li>
       <li><a href="https://www.orionfr.co.in/blank" target="_blank">Link to Teacher PPT</a></li>
       <li><a href="https://www.orionfr.co.in/blank" target="_blank">Link to Self E-Learning Videos</a></li>
-      <li><a href="https://www.orionfr.co.in/blank" target="_blank">Link to Assignment to be Done</a></li>
+      <li><a href="https://docs.google.com/document/d/1ETpZCVQjFZoXq-8_wwzixe3pP4JTZJYXTDOvtMavFQw/edit?usp=sharing" target="_blank">Link to Assignment to be Done</a></li>
     </ul>
   </main>
 
