--- a/main_content.html
+++ b/main_content.html
@@ -19,7 +19,7 @@
       <li><a href="https://docs.google.com/document/d/1SQD-2YmHkMgU-fv7J4FuOpV_pKcOlYv7jovg6iDlaRQ/edit?usp=sharing" target="_blank">Link to eBook</a></li>
       <li><a href="https://www.orionfr.co.in/blank" target="_blank">Link to Saved Live Online Lecture</a></li>
       <li><a href="https://www.orionfr.co.in/blank" target="_blank">Link to Teacher PPT</a></li>
-      <li><a href="https://www.orionfr.co.in/blank" target="_blank">Link to Self E-Learning Videos</a></li>
+      <li><a href="https://occultedge.github.io/elngengsocnanthro/" target="_blank">Link to Self E-Learning Videos</a></li>
       <li><a href="https://docs.google.com/document/d/1ETpZCVQjFZoXq-8_wwzixe3pP4JTZJYXTDOvtMavFQw/edit?usp=sharing" target="_blank">Link to Assignment to be Done</a></li>
     </ul>
   </main>
