--- a/main_content.html
+++ b/main_content.html
@@ -17,7 +17,7 @@
   <main>
     <ul>
       <li><a href="https://docs.google.com/document/d/1SQD-2YmHkMgU-fv7J4FuOpV_pKcOlYv7jovg6iDlaRQ/edit?usp=sharing" target="_blank">Link to eBook</a></li>
-      <li><a href="https://www.orionfr.co.in/blank" target="_blank">Link to Saved Live Online Lecture</a></li>
+      <li><a href="https://youtu.be/Ezf32bnrdFU" target="_blank">Link to Saved Live Online Lecture Dr Yamini</a></li>
       <li><a href="https://www.orionfr.co.in/blank" target="_blank">Link to Teacher PPT</a></li>
       <li><a href="https://occultedge.github.io/elngengsocnanthro1of2" target="_blank">Link to Self E-Learning Video- Lecture 1</a></li>
       <li><a href="https://occultedge.github.io/elngengsocnanthro/" target="_blank">Link to Self E-Learning Video- Lecture 2</a></li>
