--- a/main_content.html
+++ b/main_content.html
@@ -35,3 +35,38 @@
 </body>
 </html>
 
+
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ressources Étudiantes</title>
+</head>
+<body>
+
+  <header>
+    <h1>Ressources Étudiantes - Accès Restreint</h1>
+    <p>Veuillez cliquer sur le lien ci-dessous pour accéder à la ressource.</p>
+  </header>
+
+  <main>
+    <ul>
+      <li><a href="https://docs.google.com/document/d/1jLRFvf4rD-CjVD3RFWfPVPSa9GfLh17Xx53LhI6nU4Y/edit?usp=sharing" target="_blank">Lien vers le eBook</a></li>
+      <li><a href="https://www.orionfr.co.in/blank" target="_blank">Lien vers la Conférence Enregistrée en Ligne - Conférence 1</a></li>
+      <li><a href="https://www.orionfr.co.in/blank" target="_blank">Lien vers la Conférence Enregistrée en Ligne - Conférence 2</a></li>
+      <li><a href="https://www.orionfr.co.in/blank" target="_blank">Lien vers la Conférence Enregistrée en Ligne - Conférence 3</a></li>
+      
+      <li><a href="https://www.orionfr.co.in/blank" target="_blank">Lien vers la Présentation du Professeur (PPT)</a></li>
+      <li><a href="https://www.orionfr.co.in/blank" target="_blank">Lien vers la Vidéo d'Auto-Formation - Conférence 1</a></li>
+      <li><a href="https://www.orionfr.co.in/blank" target="_blank">Lien vers la Vidéo d'Auto-Formation - Conférence 2</a></li>
+      <li><a href="https://docs.google.com/document/d/10xpyusJyfNuBwTq3qOF85I-MIejZn3dMdUBAwEjdrzo/edit?usp=sharing target="_blank">Lien vers l'Assignation à Réaliser</a></li>
+    </ul>
+  </main>
+
+  <footer>
+    <p>&copy; 2024 Ressources Étudiantes - Accès Restreint</p>
+  </footer>
+
+</body>
+</html>
