--- a/main_content.html
+++ b/main_content.html
@@ -53,8 +53,8 @@
   <main>
     <ul>
       <li><a href="https://docs.google.com/document/d/1jLRFvf4rD-CjVD3RFWfPVPSa9GfLh17Xx53LhI6nU4Y/edit?usp=sharing" target="_blank">Lien vers le eBook</a></li>
-      <li><a href="https://www.orionfr.co.in/blank" target="_blank">Lien vers la Conférence Enregistrée en Ligne - Conférence 1</a></li>
-      <li><a href="https://www.orionfr.co.in/blank" target="_blank">Lien vers la Conférence Enregistrée en Ligne - Conférence 2</a></li>
+      <li><a href="https://youtu.be/THvGMI5wgEw" target="_blank">Lien vers la Conférence Enregistrée en Ligne - Conférence 1</a></li>
+      <li><a href="https://youtu.be/8ug2nQOF5bYk" target="_blank">Lien vers la Conférence Enregistrée en Ligne - Conférence 2</a></li>
       <li><a href="https://www.orionfr.co.in/blank" target="_blank">Lien vers la Conférence Enregistrée en Ligne - Conférence 3</a></li>
       
       <li><a href="https://www.orionfr.co.in/blank" target="_blank">Lien vers la Présentation du Professeur (PPT)</a></li>
