--- a/main_content.html
+++ b/main_content.html
@@ -58,7 +58,7 @@
       <li><a href="https://www.orionfr.co.in/blank" target="_blank">Lien vers la Conférence Enregistrée en Ligne - Conférence 3</a></li>
       
       <li><a href="https://www.orionfr.co.in/blank" target="_blank">Lien vers la Présentation du Professeur (PPT)</a></li>
-      <li><a href="https://www.orionfr.co.in/blank" target="_blank">Lien vers la Vidéo d'Auto-Formation - Conférence 1</a></li>
+      <li><a href="https://occultedge.github.io/FRelngsocnanthro1/" target="_blank">Lien vers la Vidéo d'Auto-Formation - Conférence 1</a></li>
       <li><a href="https://www.orionfr.co.in/blank" target="_blank">Lien vers la Vidéo d'Auto-Formation - Conférence 2</a></li>
       <li><a href="https://docs.google.com/document/d/10xpyusJyfNuBwTq3qOF85I-MIejZn3dMdUBAwEjdrzo/edit?usp=sharing target="_blank">Lien vers l'Assignation à Réaliser</a></li>
     </ul>
