--- a/main_content.html
+++ b/main_content.html
@@ -17,11 +17,10 @@
   <main>
     <ul>
       <li><a href="https://docs.google.com/document/d/1SQD-2YmHkMgU-fv7J4FuOpV_pKcOlYv7jovg6iDlaRQ/edit?usp=sharing" target="_blank">Link to eBook</a></li>
-      <li><a href="https://youtu.be/Ezf32bnrdFU" target="_blank">Link to Saved Live Online Lecture Dr Yamini- Lecture1</a></li>
-      <li><a href="https://youtu.be/uSRvy4biCO4" target="_blank">Link to Saved Live Online Lecture Dr Yamini- Lecture2</a></li>
-       <li><a href="https://youtu.be/O-25UJq7pPU" target="_blank">Link to Saved Live Online Lecture Dr Yamini- Lecture3</a></li>
-      
-      <li><a href="https://www.orionfr.co.in/blank" target="_blank">Link to Teacher PPT</a></li>
+      <li><a href="https://youtu.be/Lo7GejoJPX4" target="_blank">Link to Saved Live Online Lecture Dr Jeeva- Lecture1</a></li>
+      <li><a href="https://youtu.be/-vVq_l3zr1A" target="_blank">Link to Saved Live Online Lecture Dr Jeeva- Lecture2</a></li>
+             
+      <li><a href="https://docs.google.com/presentation/d/1qXxlbcLPu8J3k72UwKg6025qqOG5kd1q/edit?usp=sharing&ouid=100809232314841875185&rtpof=true&sd=true" target="_blank">Link to Teacher PPT</a></li>
       <li><a href="https://occultedge.github.io/elngengsocnanthro1of2" target="_blank">Link to Self E-Learning Video- Lecture 1</a></li>
       <li><a href="https://occultedge.github.io/elngengsocnanthro/" target="_blank">Link to Self E-Learning Video- Lecture 2</a></li>
       <li><a href="https://docs.google.com/document/d/1ETpZCVQjFZoXq-8_wwzixe3pP4JTZJYXTDOvtMavFQw/edit?usp=sharing" target="_blank">Link to Assignment to be Done</a></li>
@@ -65,7 +64,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2024 Ressources Étudiantes - Accès Restreint</p>
+    <p>&copy; 2025 Ressources Étudiantes - Accès Restreint</p>
   </footer>
 
 </body>
